Code for the Raspberry PI/ROS Workspace/emli5_ws/log/build_2023-06-04_23-37-35/plantsystem/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/pi/emli5_ws/install/plantsystem/lib/python3.10/site-packages/plantsystem/pi_node.py", line 4
    from plantsystems
                     ^
SyntaxError: invalid syntax

